<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_current">

    <fragment
        android:id="@+id/navigation_current"
        android:name="ru.geekbrains.myweather.presentation.currentweather.CurrentWeatherFragment"
        android:label="@string/navigation_current"
        tools:layout="@layout/fragment_current_weather" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="ru.geekbrains.myweather.presentation.search.SearchFragment"
        android:label="@string/navigation_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ru.geekbrains.myweather.presentation.settings.SettingsFragment"
        android:label="@string/navigation_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>