<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:context=".presentation.currentweather.CurrentWeatherFragment"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="@dimen/size_img_icon"
                android:layout_height="@dimen/size_img_icon"
                android:layout_marginTop="@dimen/margin_mini"
                android:contentDescription="@string/icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_city"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_mini"
                android:text="@string/city"
                android:textColor="#00838F"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_data" />

            <TextView
                android:id="@+id/tv_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_micro"
                android:text="@string/test"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/iv_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_current_temp" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/iv_icon"
                app:layout_constraintStart_toStartOf="@+id/iv_icon"
                app:layout_constraintTop_toBottomOf="@+id/iv_icon" />

            <TextView
                android:id="@+id/tv_temp_feel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_micro"
                android:text="@string/test"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/tv_temp"
                app:layout_constraintStart_toStartOf="@+id/tv_temp"
                app:layout_constraintTop_toBottomOf="@+id/tv_temp" />

            <ImageView
                android:id="@+id/iv_locationCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_mini"
                android:contentDescription="@string/location_city"
                app:layout_constraintBottom_toBottomOf="@+id/tv_city"
                app:layout_constraintEnd_toStartOf="@+id/tv_city"
                app:layout_constraintTop_toTopOf="@+id/tv_city"
                app:srcCompat="@drawable/ic_baseline_location_city_24" />

            <TextView
                android:id="@+id/tv_label_current_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now"
                app:layout_constraintEnd_toStartOf="@+id/iv_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_icon" />

            <TextView
                android:id="@+id/tv_temp_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_mini"
                android:text="@string/test"
                app:layout_constraintEnd_toEndOf="@+id/tv_temp_eve"
                app:layout_constraintStart_toStartOf="@+id/tv_temp_eve"
                app:layout_constraintTop_toBottomOf="@+id/tv_temp_morn" />

            <TextView
                android:id="@+id/tv_temp_eve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_mini"
                android:text="@string/test"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_icon"
                app:layout_constraintTop_toBottomOf="@+id/tv_temp_day" />

            <TextView
                android:id="@+id/tv_temp_night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_mini"
                android:text="@string/test"
                app:layout_constraintEnd_toEndOf="@+id/tv_temp_day"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/tv_temp_day"
                app:layout_constraintTop_toBottomOf="@+id/tv_temp_eve" />

            <TextView
                android:id="@+id/tv_temp_morn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                app:layout_constraintEnd_toEndOf="@+id/tv_temp_day"
                app:layout_constraintStart_toStartOf="@+id/tv_temp_day"
                app:layout_constraintTop_toTopOf="@+id/iv_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/margin_progrtss_bar"
            android:visibility="visible"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_cloud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/test"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_center" />

            <TextView
                android:id="@+id/tv_pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/test"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cloud" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/test"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pressure" />

            <TextView
                android:id="@+id/tv_dew_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/test"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_humidity" />

            <TextView
                android:id="@+id/tv_visibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/test"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dew_point" />

            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_mini"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/test"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_visibility" />

            <TextView
                android:id="@+id/tv_label_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/In_detail"
                android:textColor="#00838F"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_cloud"
                app:layout_constraintStart_toStartOf="@+id/tv_cloud"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_label_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginVertical="@dimen/margin_micro"
            android:paddingTop="@dimen/margin_normal"
            android:text="@string/Forecast_for_the_week"
            android:textAlignment="center"
            android:textColor="#00838F"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rw_daily"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_micro"
            android:paddingEnd="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_micro" />

        <TextView
            android:id="@+id/tv_label_hourly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginVertical="@dimen/margin_micro"
            android:paddingTop="@dimen/margin_normal"
            android:text="@string/Hourly_forecast"
            android:textAlignment="center"
            android:textColor="#00838F"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hourly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_micro"
            android:paddingEnd="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_micro"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>